--- a/web/ter.html
+++ b/web/ter.html
@@ -14,57 +14,57 @@
     <div class="ter_toolbar">
         <div>
             <button>
-                <img src="hamster%20assets/leiste/New24.gif" alt="Neues Territorium">
+                <img src="../hamster%20assets/leiste/New24.gif" alt="Neues Territorium">
             </button>
             <button>
-                <img src="hamster%20assets/leiste/Open24.gif" alt="Territorium öffnen">
+                <img src="../hamster%20assets/leiste/Open24.gif" alt="Territorium öffnen">
             </button>
             <button>
-                <img src="hamster%20assets/leiste/SaveAs24.gif" alt="Territorium speichern">
+                <img src="../hamster%20assets/leiste/SaveAs24.gif" alt="Territorium speichern">
             </button>
         </div>
         <div>
             <button>
-                <img src="hamster%20assets/hamster/hamstereast.png" alt="Hamster versetzen">
+                <img src="../hamster%20assets/hamster/hamstereast.png" alt="Hamster versetzen">
             </button>
             <button>
-                <img src="hamster%20assets/leiste/Turn24.gif" alt="Hamster drehen.">
+                <img src="../hamster%20assets/leiste/Turn24.gif" alt="Hamster drehen.">
             </button>
             <button>
-                <img src="hamster%20assets/leiste/HamsterCorn24.png">
+                <img src="../hamster%20assets/leiste/HamsterCorn24.png">
             </button>
             <button>
-                <img src="hamster%20assets/leiste/Corn24.gif">
+                <img src="../hamster%20assets/leiste/Corn24.gif">
             </button>
             <button>
-                <img src="hamster%20assets/wand/Wall32.png">
+                <img src="../hamster%20assets/wand/Wall32.png">
             </button>
             <button>
-                <img src="hamster%20assets/leiste/Delete32.gif">
+                <img src="../hamster%20assets/leiste/Delete32.gif">
             </button>
         </div>
         <div>
             <button>
-                <img src="hamster%20assets/leiste/ZoomIn24.gif">
+                <img src="../hamster%20assets/leiste/ZoomIn24.gif">
             </button>
             <button>
-                <img src="hamster%20assets/leiste/ZoomOut24.gif">
+                <img src="../hamster%20assets/leiste/ZoomOut24.gif">
             </button>
         </div>
         <div>
             <button disabled>
-                <img src="hamster%20assets/leiste/StepBack24.gif">
+                <img src="../hamster%20assets/leiste/StepBack24.gif">
             </button>
         </div>
         <div>
             <button disabled>
-                <img src="hamster%20assets/leiste/Play24.gif">
+                <img src="../hamster%20assets/leiste/Play24.gif">
             </button>
             <button disabled>
-                <img src="hamster%20assets/leiste/Pause24.gif">
+                <img src="../hamster%20assets/leiste/Pause24.gif">
             </button>
             <button disabled>
-                <img src="hamster%20assets/leiste/Stop24.gif">
+                <img src="../hamster%20assets/leiste/Stop24.gif">
             </button>
         </div>
     </div>
