--- a/web/edit.html
+++ b/web/edit.html
@@ -1,15 +1,45 @@
-<!DOCTYPE html>
+<!doctype html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Hamstersimulator</title>
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <title>Hamster-Editor</title>
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-  <div class="toolbar">
-    <a href="edit.html">Editor</a>
-    <a href="ter.html">Territorium</a>
-  </div>
+<h1>Hamster-Editor</h1>
+<div class="toolbar">
+    <button id="newBtn">Neue Datei</button>
+    <button id="openBtn">Datei öffnen</button>
+    <button id="saveBtn">Datei speichern</button>
+    <input type="file" id="fileInput" accept=".java" style="display: none;">
+    <div class="editor-container">
+        <div class="line-numbers" id="line-numbers"></div>
+        <div class="code-editor" id="code-editor" contenteditable="true" spellcheck="false"></div>
+    </div>
+</div>
+
+<script>
+    const fileInput = document.getElementById('fileInput');
+    const openBtn = document.getElementById('openBtn');
+    const editor = document.getElementById('code-editor');
+
+    openBtn.addEventListener('click', () => {
+        fileInput.click();
+    });
+
+    fileInput.addEventListener('change', (event) => {
+        const file = event.target.files[0];
+        if (file && file.name.endsWith('.java')) {
+            const reader = new FileReader();
+            reader.onload = function(e) {
+                editor.textContent = e.target.result;
+            };
+            reader.readAsText(file);
+        } else {
+            alert('Bitte wähle eine gültige .java-Datei aus!');
+        }
+    });
+</script>
 </body>
 </html>
