--- a/web/editor.html
+++ b/web/editor.html
@@ -1,5 +1,5 @@
 <!doctype html>
-<html lang="en">
+<html lang="de">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
@@ -20,51 +20,6 @@
     </div>
 </div>
 
-<script>
-    const fileInput = document.getElementById('fileInput');
-    const openBtn = document.getElementById('openBtn');
-    const editor = document.getElementById('code-editor');
-
-    openBtn.addEventListener('click', () => {
-        fileInput.click();
-    });
-
-    fileInput.addEventListener('change', (event) => {
-        const file = event.target.files[0];
-        if (file && file.name.endsWith('.java')) {
-            const reader = new FileReader();
-            reader.onload = function(e) {
-                editor.textContent = e.target.result;
-            };
-            reader.readAsText(file);
-        } else {
-            alert('Bitte wähle eine gültige .java-Datei aus!');
-        }
-    });
-    const saveBtn = document.getElementById('saveBtn');
-
-    saveBtn.addEventListener('click', () => {
-        const code = editor.textContent;
-        const blob = new Blob([code], { type: 'text/plain' });
-        const fileName = prompt('Dateiname eingeben:', 'meinCode.java');
-
-        if (fileName) {
-            const a = document.createElement('a');
-            a.href = URL.createObjectURL(blob);
-            a.download = fileName.endsWith('.java') ? fileName : `${fileName}.java`;
-            a.click();
-            URL.revokeObjectURL(a.href);
-        }
-    });
-    const newBtn = document.getElementById('newBtn');
-
-    newBtn.addEventListener('click', () => {
-        const confirmNew = confirm("Willst du wirklich eine neue Datei erstellen? Ungespeicherte Änderungen gehen verloren.");
-        if (confirmNew) {
-            editor.textContent = '';
-        }
-    });
-
-</script>
+<script src="edit.js"></script>
 </body>
 </html>
