assets zu data umbenannt für den tgm-projekteserver

--- a/web/edit.html
+++ b/web/edit.html
@@ -17,10 +17,10 @@
 
 <!-- Editor Toolbar -->
 <div class="toolbar">
-    <button id="newBtn"  title="Neue Datei"><img src="../assets/leiste/New24.gif"    alt="Neu"/></button>
-    <button id="openBtn" title="Datei öffnen"><img src="../assets/leiste/Open24.gif"   alt="Öffnen"/></button>
-    <button id="saveBtn" title="Datei speichern"><img src="../assets/leiste/SaveAs24.gif" alt="Speichern"/></button>
-    <button id="runBtn"  title="Run → Territorium"><img src="../assets/leiste/Play24.gif"    alt="Run"/></button>
+    <button id="newBtn"  title="Neue Datei"><img src="../data/leiste/New24.gif" alt="Neu"/></button>
+    <button id="openBtn" title="Datei öffnen"><img src="../data/leiste/Open24.gif" alt="Öffnen"/></button>
+    <button id="saveBtn" title="Datei speichern"><img src="../data/leiste/SaveAs24.gif" alt="Speichern"/></button>
+    <button id="runBtn"  title="Run → Territorium"><img src="../data/leiste/Play24.gif" alt="Run"/></button>
     <input type="file" id="fileInput" accept=".java" hidden/>
 </div>
 
