--- a/web/ter.html
+++ b/web/ter.html
@@ -16,21 +16,21 @@
 
 <!-- Territorium Toolbar -->
 <div class="toolbar ter_toolbar">
-    <button id="newTerritory"     title="Neues Territorium"><img src="../assets/leiste/New24.gif"       alt="Neu"/></button>
-    <button id="openTerritory"    title="Territorium öffnen"><img src="../assets/leiste/Open24.gif"      alt="Öffnen"/></button>
-    <button id="saveTerritory"    title="Territorium speichern"><img src="../assets/leiste/SaveAs24.gif"    alt="Speichern"/></button>
-    <button id="placeHamster"     title="Hamster versetzen"><img src="../assets/hamster/hamstereast.png" alt="Hamster"/></button>
-    <button id="rotateBtn"        title="Hamster drehen"><img src="../assets/leiste/Turn24.gif"      alt="Drehen"/></button>
-    <button id="placeHamsterCorn" title="Hamster-Körner"><img src="../assets/leiste/HamsterCorn24.png" alt="HamsterCorn"/></button>
-    <button id="placeCorn"        title="Körner setzen"><img src="../assets/leiste/Corn24.gif"       alt="Körner"/></button>
-    <button id="placeWall"        title="Wand setzen"><img src="../assets/wand/Wall32.png"         alt="Wall"/></button>
-    <button id="deleteItem"       title="Element löschen"><img src="../assets/leiste/Delete32.gif"    alt="Delete"/></button>
-    <button id="zoomIn"           title="Zoom vergrößern"><img src="../assets/leiste/ZoomIn24.gif"    alt="ZoomIn"/></button>
-    <button id="zoomOut"          title="Zoom verkleinern"><img src="../assets/leiste/ZoomOut24.gif"   alt="ZoomOut"/></button>
-    <button disabled title="Schritt zurück"><img src="../assets/leiste/StepBack24.gif" alt="StepBack"/></button>
-    <button disabled title="Abspielen"><img src="../assets/leiste/Play24.gif"      alt="Play"/></button>
-    <button disabled title="Pause"><img src="../assets/leiste/Pause24.gif"     alt="Pause"/></button>
-    <button disabled title="Stopp"><img src="../assets/leiste/Stop24.gif"      alt="Stop"/></button>
+    <button id="newTerritory"     title="Neues Territorium"><img src="../data/leiste/New24.gif" alt="Neu"/></button>
+    <button id="openTerritory"    title="Territorium öffnen"><img src="../data/leiste/Open24.gif" alt="Öffnen"/></button>
+    <button id="saveTerritory"    title="Territorium speichern"><img src="../data/leiste/SaveAs24.gif" alt="Speichern"/></button>
+    <button id="placeHamster"     title="Hamster versetzen"><img src="../data/hamster/hamstereast.png" alt="Hamster"/></button>
+    <button id="rotateBtn"        title="Hamster drehen"><img src="../data/leiste/Turn24.gif" alt="Drehen"/></button>
+    <button id="placeHamsterCorn" title="Hamster-Körner"><img src="../data/leiste/HamsterCorn24.png" alt="HamsterCorn"/></button>
+    <button id="placeCorn"        title="Körner setzen"><img src="../data/leiste/Corn24.gif" alt="Körner"/></button>
+    <button id="placeWall"        title="Wand setzen"><img src="../data/wand/Wall32.png" alt="Wall"/></button>
+    <button id="deleteItem"       title="Element löschen"><img src="../data/leiste/Delete32.gif" alt="Delete"/></button>
+    <button id="zoomIn"           title="Zoom vergrößern"><img src="../data/leiste/ZoomIn24.gif" alt="ZoomIn"/></button>
+    <button id="zoomOut"          title="Zoom verkleinern"><img src="../data/leiste/ZoomOut24.gif" alt="ZoomOut"/></button>
+    <button disabled title="Schritt zurück"><img src="../data/leiste/StepBack24.gif" alt="StepBack"/></button>
+    <button disabled title="Abspielen"><img src="../data/leiste/Play24.gif" alt="Play"/></button>
+    <button disabled title="Pause"><img src="../data/leiste/Pause24.gif" alt="Pause"/></button>
+    <button disabled title="Stopp"><img src="../data/leiste/Stop24.gif" alt="Stop"/></button>
 </div>
 
 <!-- Hidden file input -->
