Der tgm server ist richtig scheisse

--- a/web/ter.html
+++ b/web/ter.html
@@ -1,46 +1,40 @@
 <!DOCTYPE html>
 <html lang="de">
 <head>
-    <meta charset="UTF-8" />
-    <title>Hamstersimulator</title>
+    <meta charset="UTF-8"/>
     <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-    <link rel="stylesheet" href="ter_style.css" />
+    <title>Hamstersimulator</title>
+    <link rel="stylesheet" href="ter_style.css"/>
 </head>
 <body>
-<!-- Top Navigation -->
 <div class="page-nav">
     <a href="index.html" class="page-nav__link">Startseite</a>
     <a href="edit.html"  class="page-nav__link">Editor</a>
     <a href="ter.html"   class="page-nav__link is-active">Territorium</a>
 </div>
 
-<!-- Territorium Toolbar -->
-<div class="toolbar ter_toolbar">
-    <button id="newTerritory"     title="Neues Territorium"><img src="../data/leiste/New24.gif" alt="Neu"/></button>
-    <button id="openTerritory"    title="Territorium öffnen"><img src="../data/leiste/Open24.gif" alt="Öffnen"/></button>
-    <button id="saveTerritory"    title="Territorium speichern"><img src="../data/leiste/SaveAs24.gif" alt="Speichern"/></button>
-    <button id="placeHamster"     title="Hamster versetzen"><img src="../data/hamster/hamstereast.png" alt="Hamster"/></button>
-    <button id="rotateBtn"        title="Hamster drehen"><img src="../data/leiste/Turn24.gif" alt="Drehen"/></button>
-    <button id="placeHamsterCorn" title="Hamster-Körner"><img src="../data/leiste/HamsterCorn24.png" alt="HamsterCorn"/></button>
-    <button id="placeCorn"        title="Körner setzen"><img src="../data/leiste/Corn24.gif" alt="Körner"/></button>
-    <button id="placeWall"        title="Wand setzen"><img src="../data/wand/Wall32.png" alt="Wall"/></button>
-    <button id="deleteItem"       title="Element löschen"><img src="../data/leiste/Delete32.gif" alt="Delete"/></button>
-    <button id="zoomIn"           title="Zoom vergrößern"><img src="../data/leiste/ZoomIn24.gif" alt="ZoomIn"/></button>
-    <button id="zoomOut"          title="Zoom verkleinern"><img src="../data/leiste/ZoomOut24.gif" alt="ZoomOut"/></button>
-    <button disabled title="Schritt zurück"><img src="../data/leiste/StepBack24.gif" alt="StepBack"/></button>
-    <button disabled title="Abspielen"><img src="../data/leiste/Play24.gif" alt="Play"/></button>
-    <button disabled title="Pause"><img src="../data/leiste/Pause24.gif" alt="Pause"/></button>
-    <button disabled title="Stopp"><img src="../data/leiste/Stop24.gif" alt="Stop"/></button>
+<div class="toolbar">
+    <button id="newTerritory"  title="Neues Territorium"><img src="data/leiste/New24.gif" alt="Neu"/></button>
+    <button id="openTerritory" title="Territorium öffnen"><img src="data/leiste/Open24.gif" alt="Öffnen"/></button>
+    <button id="saveTerritory" title="Territorium speichern"><img src="data/leiste/SaveAs24.gif" alt="Speichern"/></button>
+    <button id="placeHamster"  title="Hamster versetzen"><img src="data/hamster/hamstereast.png" alt="Hamster"/></button>
+    <button id="rotateBtn"     title="Hamster drehen"><img src="data/leiste/Turn24.gif" alt="Drehen"/></button>
+    <button id="placeHamsterCorn" title="Hamster-Körner"><img src="data/leiste/HamsterCorn24.png" alt="HamsterCorn"/></button>
+    <button id="placeCorn"     title="Körner setzen"><img src="data/leiste/Corn24.gif" alt="Körner"/></button>
+    <button id="placeWall"     title="Wand setzen"><img src="data/wand/Wall32.png" alt="Wall"/></button>
+    <button id="deleteItem"    title="Element löschen"><img src="data/leiste/Delete32.gif" alt="Löschen"/></button>
+    <button id="zoomIn"        title="Zoom In"><img src="data/leiste/ZoomIn24.gif" alt="ZoomIn"/></button>
+    <button id="zoomOut"       title="Zoom Out"><img src="data/leiste/ZoomOut24.gif" alt="ZoomOut"/></button>
+    <button disabled title="Schritt zurück"><img src="data/leiste/StepBack24.gif" alt="Zurück"/></button>
+    <button disabled title="Play"><img src="data/leiste/Play24.gif" alt="Play"/></button>
+    <button disabled title="Pause"><img src="data/leiste/Pause24.gif" alt="Pause"/></button>
+    <button disabled title="Stop"><img src="data/leiste/Stop24.gif" alt="Stop"/></button>
+    <input type="file" id="fileInput" accept=".ter" hidden/>
 </div>
 
-<!-- Hidden file input -->
-<input type="file" id="fileInput" accept=".ter" hidden />
-
-<!-- Grid & Corn Display -->
 <div id="gridContainer"></div>
 <div id="cornDisplay" class="corn-display">Körner im Maul: 0</div>
 
-<!-- Territorium Modal -->
 <div id="territoryModal" class="modal hidden">
     <div class="modal-content">
         <label for="rows">Zeilen:</label>
@@ -52,7 +46,6 @@
     </div>
 </div>
 
-<!-- Körner Modal -->
 <div id="cornModal" class="modal hidden">
     <div class="modal-content">
         <label for="cornCountInput">Körner (1–12):</label>
@@ -61,9 +54,6 @@
         <button id="cornCancel">Abbrechen</button>
     </div>
 </div>
-
-<!-- Theme Toggle Button -->
-<button id="themeToggle" class="theme-toggle-button" title="Light / Dark">☀️</button>
 
 <script src="ter.js"></script>
 </body>
