--- a/web/edit.html
+++ b/web/edit.html
@@ -5,33 +5,28 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
     <title>Hamster-Editor</title>
     <link href="https://fonts.googleapis.com/css2?family=Fira+Code&display=swap" rel="stylesheet"/>
+    <link rel="stylesheet" href="ter_style.css"/>
     <link rel="stylesheet" href="edit_style.css"/>
 </head>
 <body>
-<!-- Top Navigation -->
 <div class="page-nav">
     <a href="index.html" class="page-nav__link">Startseite</a>
     <a href="edit.html"  class="page-nav__link is-active">Editor</a>
     <a href="ter.html"   class="page-nav__link">Territorium</a>
 </div>
 
-<!-- Editor Toolbar -->
 <div class="toolbar">
-    <button id="newBtn"  title="Neue Datei"><img src="../data/leiste/New24.gif" alt="Neu"/></button>
-    <button id="openBtn" title="Datei öffnen"><img src="../data/leiste/Open24.gif" alt="Öffnen"/></button>
-    <button id="saveBtn" title="Datei speichern"><img src="../data/leiste/SaveAs24.gif" alt="Speichern"/></button>
-    <button id="runBtn"  title="Run → Territorium"><img src="../data/leiste/Play24.gif" alt="Run"/></button>
+    <button id="newBtn"  title="Neue Datei"><img src="data/leiste/New24.gif" alt="Neu"/></button>
+    <button id="openBtn" title="Datei öffnen"><img src="data/leiste/Open24.gif" alt="Öffnen"/></button>
+    <button id="saveBtn" title="Datei speichern"><img src="data/leiste/SaveAs24.gif" alt="Speichern"/></button>
+    <button id="runBtn"  title="Run → Territorium"><img src="data/leiste/Play24.gif" alt="Run"/></button>
     <input type="file" id="fileInput" accept=".java" hidden/>
 </div>
 
-<!-- Editor Area -->
 <div class="editor-container">
     <div id="line-numbers" class="line-numbers"></div>
     <div id="code-editor"  class="code-editor" contenteditable="true" spellcheck="false"></div>
 </div>
-
-<!-- Theme Toggle Button -->
-<button id="themeToggle" class="theme-toggle-button" title="Light / Dark">☀️</button>
 
 <script src="edit.js"></script>
 </body>
