--- a/web/edit.html
+++ b/web/edit.html
@@ -1,10 +1,22 @@
+<!-- edit.html -->
 <!doctype html>
 <html lang="de">
 <head>
     <meta charset="UTF-8"/>
     <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
     <title>Hamster-Editor</title>
-    <link href="https://fonts.googleapis.com/css2?family=Fira+Code&display=swap" rel="stylesheet"/>
+
+    <!-- CodeMirror Styles -->
+    <link
+            rel="stylesheet"
+            href="https://cdnjs.cloudflare.com/ajax/libs/codemirror/5.65.13/codemirror.min.css"
+    />
+    <link
+            rel="stylesheet"
+            href="https://cdnjs.cloudflare.com/ajax/libs/codemirror/5.65.13/theme/eclipse.min.css"
+    />
+
+    <!-- Your own styles -->
     <link rel="stylesheet" href="ter_style.css"/>
     <link rel="stylesheet" href="edit_style.css"/>
 </head>
@@ -24,9 +36,15 @@
 </div>
 
 <div class="editor-container">
-    <div id="line-numbers" class="line-numbers"></div>
-    <div id="code-editor"  class="code-editor" contenteditable="true" spellcheck="false"></div>
+    <!-- CodeMirror will replace this -->
+    <textarea id="code-editor" spellcheck="false"></textarea>
 </div>
+
+<!-- CodeMirror Scripts -->
+<script src="https://cdnjs.cloudflare.com/ajax/libs/codemirror/5.65.13/codemirror.min.js"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/codemirror/5.65.13/mode/clike/clike.min.js"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/codemirror/5.65.13/addon/edit/matchbrackets.min.js"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/codemirror/5.65.13/addon/edit/closebrackets.min.js"></script>
 
 <script src="edit.js"></script>
 </body>
