--- a/web/ter.html
+++ b/web/ter.html
@@ -1,3 +1,4 @@
+<!-- ter.html -->
 <!DOCTYPE html>
 <html lang="de">
 <head>
@@ -34,6 +35,7 @@
 
 <div id="gridContainer"></div>
 <div id="cornDisplay" class="corn-display">Körner im Maul: 0</div>
+<div id="writerOutput" class="writer-output"></div>
 
 <div id="territoryModal" class="modal hidden">
     <div class="modal-content">
