i came on the screen right now

--- a/web/index.html
+++ b/web/index.html
@@ -1,12 +1,39 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="de">
 <head>
     <meta charset="UTF-8">
-    <title>Hamstersimulator</title>
+    <title>Reallife Hamster Simulator</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
+<h1>Willkommen beim Reallife Hamster Simulator 🐹</h1>
 
+<div class="button-container">
+    <a href="edit.html">
+        <button class="nav-button">Editor</button>
+    </a>
+    <a href="ter.html">
+        <button class="nav-button">Territorium</button>
+    </a>
+</div>
+
+<section class="info">
+    <p><strong>Beschreibung:</strong><br>
+        Steuere deinen Hamster mit Java-Code und gestalte eigene Territorien.</p>
+
+    <p><strong>Features:</strong></p>
+    <ul>
+        <li>Java-Editor mit Speicherfunktion</li>
+        <li>Territorium-Editor mit Walls, Corns & Hamster</li>
+        <li>MQTT-Anbindung für Live-Daten</li>
+    </ul>
+</section>
+
+<footer>
+    &copy; 2025 RL Hamster Simulator – Schulprojekt 3AHIT
+</footer>
+
+<script src="index.js"></script>
 </body>
 </html>
