i came on the screen right now pt2

--- a/web/index.html
+++ b/web/index.html
@@ -31,7 +31,7 @@
 </section>
 
 <footer>
-    &copy; 2025 RL Hamster Simulator – Schulprojekt 3AHIT
+    2025 RL Hamster Simulator – Schulprojekt 2024/2025
 </footer>
 
 <script src="index.js"></script>
