--- a/web/index.html
+++ b/web/index.html
@@ -11,10 +11,10 @@
 
 <div class="button-container">
     <a href="edit.html">
-        <button class="nav-button">Editor</button>
+        <button class="nav-button editor">Editor</button>
     </a>
     <a href="ter.html">
-        <button class="nav-button">Territorium</button>
+        <button class="nav-button territorium">Territorium</button>
     </a>
 </div>
 
