--- a/web/index.html
+++ b/web/index.html
@@ -26,7 +26,7 @@
     <ul>
         <li>Java-Editor mit Speicherfunktion</li>
         <li>Territorium-Editor mit Walls, Corns & Hamster</li>
-        <li>MQTT-Anbindung für Live-Daten</li>
+        <li>HTTP-Anbindung an ESP32 für Live-Daten</li>
     </ul>
 </section>
 
@@ -35,5 +35,6 @@
 </footer>
 
 <script src="index.js"></script>
+<script src="esp32-client.js"></script>
 </body>
 </html>
