--- a/web/edit.html
+++ b/web/edit.html
@@ -1,4 +1,3 @@
-<!-- File: edit.html -->
 <!DOCTYPE html>
 <html lang="de">
 <head>
@@ -44,12 +43,12 @@
     <textarea id="code-editor"></textarea>
 </div>
 
-<!-- CodeMirror scripts -->
 <script src="https://cdnjs.cloudflare.com/ajax/libs/codemirror/5.65.13/codemirror.min.js"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/codemirror/5.65.13/mode/clike/clike.min.js"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/codemirror/5.65.13/addon/edit/matchbrackets.min.js"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/codemirror/5.65.13/addon/edit/closebrackets.min.js"></script>
 
 <script src="edit.js"></script>
+<script src="esp32-client.js"></script>
 </body>
 </html>
